--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
-    "next": "10.2.0",
+    "@project-serum/sol-wallet-adapter": "^0.2.5",
+    "@solana/wallet-adapter-base": "^0.5.2",
+    "@solana/wallet-adapter-react": "^0.9.2",
+    "@solana/wallet-adapter-wallets": "^0.7.6",
+    "@solana/web3.js": "^1.24.1",
+    "next": "^11.1.2",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -35,6 +40,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
+    "next-transpile-modules": "^8.0.0",
     "postcss": "^8.2.15",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.1.2",
